--- a/main.html
+++ b/main.html
@@ -10,17 +10,17 @@
 
 <table >
 <tr>
-<td >
-<table>
-<tr> <th colspan="2"> Nested Table 2 </th> </tr>
-<tr> <th> Column 1 </th> <th> Column 2 </th> </tr>
-<tr> <td> Our First Table </td>
-<td> Nested Within </td> </tr>
+	<td >
+	<table>
+	<tr> <th colspan="2"> Nested Table 2 </th> </tr>
+	<tr> <th> Column 1 </th> <th> Column 2 </th> </tr>
+	<tr> <td> abc</td>
+<td> df </td> </tr>
 </table>
 </td>
 <td>
 <table >
-<tr> <th> Nested Table 2 </th> </tr>
+<tr> <th> Nested Table 1 </th> </tr>
 <tr>
 <td>
 <ul>
@@ -43,7 +43,7 @@
 <table>
 <tr> <th> Nested Table 4 </th> </tr>
 <tr>
-<td > HTML </td> </tr> </table>
+<td style="text-align:center"> HTML </td> </tr> </table>
 </td>
 </tr>
 </table>
