--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-<table >
+<table border >
 <tr>
 	<td >
 	<table>
@@ -41,7 +41,7 @@
 </table> </td>
 <td>
 <table>
-<tr> <th> Nested Table 4 </th> </tr>
+<tr> <th > Nested Table 4 </th> </tr>
 <tr>
 <td style="text-align:center"> HTML </td> </tr> </table>
 </td>
