--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 <table border >
 <tr>
 	<td >
-	<table>
+	<table border>
 	<tr> <th colspan="2"> Nested Table 2 </th> </tr>
 	<tr> <th> Column 1 </th> <th> Column 2 </th> </tr>
 	<tr> <td> abc</td>
@@ -19,7 +19,7 @@
 </table>
 </td>
 <td>
-<table >
+<table border >
 <tr> <th> Nested Table 1 </th> </tr>
 <tr>
 <td>
@@ -33,17 +33,17 @@
 </table> </td> </tr>
 <tr>
 <td>
-<table>
+<table border>
 <tr> <th colspan="2" align="center"> Nested Table 3 </th> </tr>
 <tr>
 <td> <a href=""> Nested Table </a> </td>
 <td> Demo Continued </td> </tr>
 </table> </td>
 <td>
-<table>
+<table border>
 <tr> <th > Nested Table 4 </th> </tr>
 <tr>
-<td style="text-align:center"> HTML </td> </tr> </table>
+<td style="text-align:center;color: #fff;background-color: #333;"> HTML </td> </tr> </table>
 </td>
 </tr>
 </table>
